# Hands-On-Microservices-with-Rust

Chapter15/deploy/microservices/users/: Cargo.toml  Dockerfile
Chapter15/deploy/microservices/users/src/: main.rs
