[package]
name = "users-microservice"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]

[dependencies]
clap = "4.4.11"
config = "0.13.4"
diesel = { version = "^2.1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
env_logger = "0.10.1"
failure = "0.1"
fallible-iterator = "0.1.6"
log = "0.4"
postgres = "0.15.0"
postgres-protocol = "0.3.2"
postgres-shared = "0.4.2"
r2d2 = "0.8"
rouille = "3.6.2"
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
hmac = "0.6.3"